syntax = "proto3";

package block;

message BlockHead {
    int64 version = 1;
    bytes parentHash = 2;
    bytes txsHash = 3;
    bytes merkleHash = 4;
    bytes info = 5;
    int64 number = 6;
    string witness = 7;
    bytes signature = 8;
    int64 time = 9;
}

message BlockRaw {
    BlockHead head = 1;
    repeated bytes txs = 2;
    repeated bytes receipts = 3;
}
